--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -35,12 +35,12 @@ jobs:
     - name: Setup Node
       uses: actions/setup-node@v3
       with:
-        node-version: "18"
+        node-version: "20"
         cache: npm
 
     - name: Install dependencies
       run: |
-        if [ -f "package.json" ]; then
+        if [ -f "**/package.json" ]; then
           npm ci
         else
           echo "Unable to determine package manager"
