--- a/artbyt-web/package.json
+++ b/artbyt-web/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.5.1",
     "date-fns": "^3.3.1",
     "gray-matter": "^4.0.3",
+    "headlessui": "^0.0.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
@@ -21,7 +22,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
