--- a/artbyt-web/package.json
+++ b/artbyt-web/package.json
@@ -8,17 +8,23 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
+    "@vercel/blob": "^0.23.4",
+    "@vercel/postgres": "^0.9.0",
+    "@vercel/postgres-kysely": "^0.9.0",
+    "bcrypt": "^5.1.1",
     "classnames": "^2.5.1",
     "date-fns": "^3.3.1",
     "gray-matter": "^4.0.3",
     "headlessui": "^0.0.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
