--- a/artbyt-web/package.json
+++ b/artbyt-web/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^3.3.1",
     "gray-matter": "^4.0.3",
     "headlessui": "^0.0.0",
+    "kysely": "^0.27.5",
     "next": "14.1.0",
     "next-auth": "^4.24.11",
     "react": "^18",
