--- a/artbyt-web/package.json
+++ b/artbyt-web/package.json
@@ -6,7 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.19",
+    "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.1.3",
     "@vercel/blob": "^0.23.4",
     "@vercel/postgres": "^0.9.0",
@@ -14,13 +14,15 @@
     "bcrypt": "^5.1.1",
     "classnames": "^2.5.1",
     "date-fns": "^3.3.1",
+    "eslint-config-next": "^15.0.0",
     "gray-matter": "^4.0.3",
     "headlessui": "^0.0.0",
     "kysely": "^0.27.5",
-    "next": "14.1.0",
-    "next-auth": "^4.24.11",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^16.1.0",
+    "next-auth": "^4.24.13",
+    "next-devtools-mcp": "^0.3.7",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
   },
