--- a/artbyt-web/package.json
+++ b/artbyt-web/package.json
@@ -8,18 +8,13 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.1.3",
-    "@vercel/blob": "^0.23.4",
-    "@vercel/postgres": "^0.9.0",
-    "@vercel/postgres-kysely": "^0.9.0",
-    "bcrypt": "^5.1.1",
     "classnames": "^2.5.1",
     "date-fns": "^3.3.1",
+    "decap-cms-app": "^3.9.0",
     "eslint-config-next": "^15.0.0",
     "gray-matter": "^4.0.3",
     "headlessui": "^0.0.0",
-    "kysely": "^0.27.5",
     "next": "^16.1.0",
-    "next-auth": "^4.24.13",
     "next-devtools-mcp": "^0.3.7",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -27,7 +22,6 @@
     "remark-html": "^16.0.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
