--- a/artbyt-web/public/admin/config.yml
+++ b/artbyt-web/public/admin/config.yml
@@ -2,11 +2,9 @@ backend:
   name: github
   repo: eengholm/artbyt-web
   branch: main
-  base_url: https://artbyt-web.vercel.app  # Replace with your Vercel URL
-  auth_endpoint: /api/auth
 
 # Enable local development mode (for Git operations with decap-server)
-local_backend: true
+# local_backend: true
 
 media_folder: "public/assets/assignments"
 public_folder: "/assets/assignments"
