--- a/artbyt-web/public/admin/config.yml
+++ b/artbyt-web/public/admin/config.yml
@@ -2,7 +2,8 @@ backend:
   name: github
   repo: eengholm/artbyt-web
   branch: main
-  base_url: https://artbyt-web.vercel.app
+  base_url: https://github.com/login/oauth/authorize
+  client_id: Ov23lig1465oPPMvInSH
 
 # Enable local development mode (for Git operations with decap-server)
 # local_backend: true
