--- a/artbyt-web/package.json
+++ b/artbyt-web/package.json
@@ -16,6 +16,7 @@
     "headlessui": "^0.0.0",
     "next": "^16.1.0",
     "next-devtools-mcp": "^0.3.7",
+    "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "remark": "^15.0.1",
