Improved folder strucutre

--- a/artbyt-web/tsconfig.json
+++ b/artbyt-web/tsconfig.json
@@ -24,6 +24,18 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@/components/*": [
+        "./src/app/_components/*"
+      ],
+      "@/lib/*": [
+        "./src/lib/*"
+      ],
+      "@/types/*": [
+        "./src/types/*"
+      ],
+      "@/styles/*": [
+        "./src/styles/*"
       ]
     },
     "target": "ES2017"
