--- a/artbyt-web/package.json
+++ b/artbyt-web/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "npm run build:cms && next build",
+    "build:cms": "node scripts/build-cms.js",
     "start": "next start"
   },
   "dependencies": {
@@ -28,6 +29,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "esbuild": "^0.27.2",
     "eslint": "^9.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.3",
